--- a/bibliography.bib
+++ b/bibliography.bib
@@ -112,6 +112,16 @@ C:/Papers/Journal of Housing Economics/Journal of Housing Economics (2003) 12 (1
    type = {Journal Article}
 }
 
+@inproceedings{Dietterich2000,
+   author = {Dietterich, Thomas G},
+   title = {Ensemble methods in machine learning},
+   booktitle = {International workshop on multiple classifier systems},
+   publisher = {Springer},
+   pages = {1-15},
+   year = {2000},
+   type = {Conference Proceedings}
+}
+
 @article{Feitelson1993,
    author = {Feitelson, E.},
    title = {An Hierarchical Approach to the Segmentation of Residential Demand - Theory and Application},
@@ -434,6 +444,16 @@ C:/Papers/Journal of Housing Economics/Journal of Housing Economics (2003) 12 (1
    type = {Journal Article}
 }
 
+@inproceedings{Menze2011,
+   author = {Menze, Bjoern H and Kelm, B Michael and Splitthoff, Daniel N and Koethe, Ullrich and Hamprecht, Fred A},
+   title = {On oblique random forests},
+   booktitle = {Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+   publisher = {Springer},
+   pages = {453-469},
+   year = {2011},
+   type = {Conference Proceedings}
+}
+
 @Manual{Menze2012,
   title = {obliqueRF: Oblique Random Forests from Recursive Linear Model Splits},
   author = {Bjoern Menze and Nico Splitthoff},
@@ -546,6 +566,28 @@ C:/Papers/Journal of Housing Economics/Journal of Housing Economics (2003) 12 (1
    type = {Journal Article}
 }
 
+@article{QiuZhang2017,
+   author = {Qiu, Xueheng and Zhang, Le and Suganthan, Ponnuthurai Nagaratnam and Amaratunga, Gehan AJ},
+   title = {Oblique random forest ensemble via Least Square Estimation for time series forecasting},
+   journal = {Information Sciences},
+   volume = {420},
+   pages = {249-262},
+   ISSN = {0020-0255},
+   year = {2017},
+   type = {Journal Article}
+}
+
+@article{RenZhang2016,
+   author = {Ren, Ye and Zhang, Le and Suganthan, Ponnuthurai N},
+   title = {Ensemble classification and regression-recent developments, applications and future directions},
+   journal = {IEEE Computational Intelligence Magazine},
+   volume = {11},
+   number = {1},
+   pages = {41-53},
+   year = {2016},
+   type = {Journal Article}
+}
+
   @Manual{Ripley2018,
     title = {tree: Classification and Regression Trees},
     author = {Brian Ripley},
@@ -565,6 +607,18 @@ C:/Papers/Journal of Housing Economics/Journal of Housing Economics (2003) 12 (1
    DOI= {10.1007/s10589-013-9560-9},
    url = {https://doi.org/10.1007/s10589-013-9560-9},
    year = {2013},
+   type = {Journal Article}
+}
+
+@article{Rokach2010,
+   author = {Rokach, Lior},
+   title = {Ensemble-based classifiers},
+   journal = {Artificial Intelligence Review},
+   volume = {33},
+   number = {1-2},
+   pages = {1-39},
+   ISSN = {0269-2821},
+   year = {2010},
    type = {Journal Article}
 }
 
@@ -740,6 +794,62 @@ C:/Papers/Journal of Housing Economics/Journal of Housing Economics (2003) 12 (1
    DOI= {10.1109/TNN.2005.852864},
    year = {2005},
    type = {Journal Article}
+}
+
+@inproceedings{ZhangRen2014,
+   author = {Zhang, Le and Ren, Ye and Suganthan, Ponnuthurai N},
+   title = {Towards generating random forests via extremely randomized trees},
+   booktitle = {Neural Networks (IJCNN), 2014 International Joint Conference on},
+   publisher = {IEEE},
+   pages = {2645-2652},
+   ISBN = {1479914843},
+   year = {2014},
+   type = {Conference Proceedings}
+}
+
+@article{ZhangSuganthan2014,
+   author = {Zhang, Le and Suganthan, Ponnuthurai Nagaratnam},
+   title = {Random forests with ensemble of feature spaces},
+   journal = {Pattern Recognition},
+   volume = {47},
+   number = {10},
+   pages = {3429-3437},
+   ISSN = {0031-3203},
+   year = {2014},
+   type = {Journal Article}
+}
+
+@article{ZhangSuganthan2015,
+   author = {Zhang, Le and Suganthan, Ponnuthurai N},
+   title = {Oblique decision tree ensemble via multisurface proximal support vector machine},
+   journal = {IEEE transactions on cybernetics},
+   volume = {45},
+   number = {10},
+   pages = {2165-2176},
+   ISSN = {2168-2267},
+   year = {2015},
+   type = {Journal Article}
+}
+
+@article{ZhangSuganthan2017,
+   author = {Zhang, Le and Suganthan, Ponnuthurai Nagaratnam},
+   title = {Benchmarking Ensemble Classifiers with Novel Co-Trained Kernel Ridge Regression and Random Vector Functional Link Ensembles [Research Frontier]},
+   journal = {IEEE Computational Intelligence Magazine},
+   volume = {12},
+   number = {4},
+   pages = {61-72},
+   ISSN = {1556-603X},
+   year = {2017},
+   type = {Journal Article}
+}
+
+@inproceedings{ZhangVaradajan2017,
+   author = {Zhang, Le and Varadarajan, Jagannadan and Suganthan, Ponnuthurai Nagaratnam and Ahuja, Narendra and Moulin, Pierre},
+   title = {Robust visual tracking using oblique random forests},
+   booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+   pages = {5589-5598},
+   year = {2017},
+   type = {Conference Proceedings}
 }
 
   @Manual{Zhu2018,
